--- a/hls.html
+++ b/hls.html
@@ -9,7 +9,7 @@
 	<body>
 		<h1>HLS Player</h1>
 		<video id="player" class="video-js vjs-default-skin" width="720" controls preload="auto">
-			<source src="https://ghproxy.net/https://raw.githubusercontent.com/uzi-gay/ff/main/ip1.m3u" type="application/x-mpegURL" />
+			<source src="https://ldncctvwbndhwy.cntv.myhwcdn.cn/ldncctvwbnd/ldcctv1_2/index.m3u8" type="application/x-mpegURL" />
 		</video>
 		<script>
 			var player = videojs('#player');
